# name: test_query_all_tasks[simple]
  dict({
    'allTasks': dict({
      'edges': list([
        dict({
          'node': dict({
            '__typename': 'SimpleTask',
            'description': '''
              All response later state. Rock event recent public final.
              Hope star check record well.
              With Mr letter eye way society. Move enter them his half long.
            ''',
            'meta': dict({
            }),
            'name': 'Taylor Williams',
            'slug': 'suggest-adult-allow',
          }),
        }),
      ]),
      'totalCount': 1,
    }),
  })
# ---
# name: test_save_comlete_task_form_task
  dict({
    'saveCompleteTaskFormTask': dict({
      'clientMutationId': 'testid',
      'task': dict({
        '__typename': 'CompleteTaskFormTask',
        'meta': dict({
        }),
        'name': 'Taylor Williams',
        'slug': 'suggest-adult-allow',
      }),
    }),
  })
# ---
# name: test_save_task[SaveCompleteWorkflowFormTask]
  dict({
    'saveCompleteWorkflowFormTask': dict({
      'clientMutationId': 'testid',
      'task': dict({
        '__typename': 'CompleteWorkflowFormTask',
        'meta': dict({
        }),
        'name': 'Taylor Williams',
        'slug': 'suggest-adult-allow',
      }),
    }),
  })
# ---
# name: test_save_task[SaveSimpleTask]
  dict({
    'saveSimpleTask': dict({
      'clientMutationId': 'testid',
      'task': dict({
        '__typename': 'SimpleTask',
        'meta': dict({
        }),
        'name': 'Taylor Williams',
        'slug': 'suggest-adult-allow',
      }),
    }),
  })
# ---
